# logoMCP

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md
backend/: pyproject.toml  test_e2e.py
backend/src/logogen/: __init__.py  config.py  server.py
backend/src/logogen/db/: connection.py  migrations.py  repository.py
backend/src/logogen/pipeline/: image_gen.py  memory.py  text_gen.py
backend/src/logogen/prompts/: templates.py
backend/src/logogen/services/: font_service.py  image_processing.py  svg_service.py  template_engine.py
backend/src/logogen/templates/: __init__.py  logo_variants.py
backend/tests/: conftest.py  test_db.py  test_image_gen.py  test_memory.py  test_prompts.py  test_schemas.py  test_template_engine.py  test_templates.py  test_text_gen.py
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/types/: index.ts
